Added helper to write image tags in a cshtml, with image resize. The tag comes with a data-src attribute that allows deferred loading of full size images.

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -283,6 +283,7 @@
     <Compile Include="CultureCommands\CultureCommandsExtension.cs" />
     <Compile Include="Drivers\AuthenticationRequiredPartDriver.cs" />
     <Compile Include="Drivers\JsonDataTablePartDriver.cs" />
+    <Compile Include="FrontendExtensions\Shapes\ImageShapes.cs" />
     <Compile Include="Handlers\JsonDataTablePartHandler.cs" />
     <Compile Include="IdentityProvider\IIdentityProvider.cs" />
     <Compile Include="IdentityProvider\RolesIdentityProvider.cs" />
