Squashed commit of the following:
commit 9a1f748cee146b26f8b8157affddbc24f1adf629
Author: HermesSbicego-Laser <hermes.sbicego@laser-group.com>
Date:   Thu Dec 6 09:20:29 2018 +0100

    - refactoring properties for better understanding JSON values

commit 6adede68c3fb64b70811833130263f387db490fc
Author: HermesSbicego-Laser <hermes.sbicego@laser-group.com>
Date:   Thu Dec 6 00:46:03 2018 +0100

    Hierarchical settings for Contrib Widget. Allow to set available Widgets per available Zones

--- a/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
+++ b/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
@@ -151,8 +151,10 @@
     <Compile Include="Services\ILayerManager.cs" />
     <Compile Include="Services\WidgetContainerPartDumperService.cs" />
     <Compile Include="Services\WidgetManager.cs" />
+    <Compile Include="Settings\Widget.cs" />
     <Compile Include="Settings\WidgetsContainerEvents.cs" />
     <Compile Include="Settings\WidgetsContainerSettings.cs" />
+    <Compile Include="Settings\Zone.cs" />
     <Compile Include="ViewModels\WidgetsContainerSettingsViewModel.cs" />
     <Compile Include="ViewModels\WidgetsContainerViewModel.cs" />
     <Compile Include="Drivers\WidgetsContainerPartDriver.cs" />
