--- a/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
+++ b/src/Themes/KrakeDefaultTheme/KrakeDefaultTheme.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Settings\Models\ThemeSettingsRecord.cs" />
     <Compile Include="Settings\Services\ThemeSettingsService.cs" />
     <Compile Include="Settings\ViewModels\ThemeSettingsViewModel.cs" />
+    <Compile Include="TermidsLocalizableRoute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Admin\ThemeSettings.cshtml" />
@@ -251,9 +252,17 @@
       <Project>{9916839c-39fc-4ceb-a5af-89ca7e87119f}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Localization\Orchard.Localization.csproj">
+      <Project>{fbc8b571-ed50-49d8-8d9d-64ab7454a0d6}</Project>
+      <Name>Orchard.Localization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.MediaLibrary\Orchard.MediaLibrary.csproj">
       <Project>{73a7688a-5bd3-4f7e-adfa-ce36c5a10e3b}</Project>
       <Name>Orchard.MediaLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Taxonomies\Orchard.Taxonomies.csproj">
+      <Project>{e649ea64-d213-461b-87f7-d67035801443}</Project>
+      <Name>Orchard.Taxonomies</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Themes\Orchard.Themes.csproj">
       <Project>{cde24a24-01d3-403c-84b9-37722e18dfb7}</Project>
@@ -262,6 +271,10 @@
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
       <Name>Orchard.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Laser.Orchard.CulturePicker\Laser.Orchard.CulturePicker.csproj">
+      <Project>{2896dd3e-a55b-493f-9483-a107aa54c930}</Project>
+      <Name>Laser.Orchard.CulturePicker</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
