Updated tabulator to v4.1. updated resource manifest. Updated Editor for JsonDataTable

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -133,12 +133,87 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\spectrum.js" />
-    <Content Include="Scripts\tabulator.min.js" />
+    <Content Include="Scripts\tabulator\jquery_wrapper.js" />
+    <Content Include="Scripts\tabulator\jquery_wrapper.min.js" />
+    <Content Include="Scripts\tabulator\modules\accessor.js" />
+    <Content Include="Scripts\tabulator\modules\accessor.min.js" />
+    <Content Include="Scripts\tabulator\modules\ajax.js" />
+    <Content Include="Scripts\tabulator\modules\ajax.min.js" />
+    <Content Include="Scripts\tabulator\modules\calculation_colums.js" />
+    <Content Include="Scripts\tabulator\modules\calculation_colums.min.js" />
+    <Content Include="Scripts\tabulator\modules\clipboard.js" />
+    <Content Include="Scripts\tabulator\modules\clipboard.min.js" />
+    <Content Include="Scripts\tabulator\modules\data_tree.js" />
+    <Content Include="Scripts\tabulator\modules\data_tree.min.js" />
+    <Content Include="Scripts\tabulator\modules\download.js" />
+    <Content Include="Scripts\tabulator\modules\download.min.js" />
+    <Content Include="Scripts\tabulator\modules\edit.js" />
+    <Content Include="Scripts\tabulator\modules\edit.min.js" />
+    <Content Include="Scripts\tabulator\modules\filter.js" />
+    <Content Include="Scripts\tabulator\modules\filter.min.js" />
+    <Content Include="Scripts\tabulator\modules\format.js" />
+    <Content Include="Scripts\tabulator\modules\format.min.js" />
+    <Content Include="Scripts\tabulator\modules\frozen_columns.js" />
+    <Content Include="Scripts\tabulator\modules\frozen_columns.min.js" />
+    <Content Include="Scripts\tabulator\modules\frozen_rows.js" />
+    <Content Include="Scripts\tabulator\modules\frozen_rows.min.js" />
+    <Content Include="Scripts\tabulator\modules\group_rows.js" />
+    <Content Include="Scripts\tabulator\modules\group_rows.min.js" />
+    <Content Include="Scripts\tabulator\modules\history.js" />
+    <Content Include="Scripts\tabulator\modules\history.min.js" />
+    <Content Include="Scripts\tabulator\modules\html_table_import.js" />
+    <Content Include="Scripts\tabulator\modules\html_table_import.min.js" />
+    <Content Include="Scripts\tabulator\modules\keybindings.js" />
+    <Content Include="Scripts\tabulator\modules\keybindings.min.js" />
+    <Content Include="Scripts\tabulator\modules\moveable_columns.js" />
+    <Content Include="Scripts\tabulator\modules\moveable_columns.min.js" />
+    <Content Include="Scripts\tabulator\modules\moveable_rows.js" />
+    <Content Include="Scripts\tabulator\modules\moveable_rows.min.js" />
+    <Content Include="Scripts\tabulator\modules\mutator.js" />
+    <Content Include="Scripts\tabulator\modules\mutator.min.js" />
+    <Content Include="Scripts\tabulator\modules\page.js" />
+    <Content Include="Scripts\tabulator\modules\page.min.js" />
+    <Content Include="Scripts\tabulator\modules\persistence.js" />
+    <Content Include="Scripts\tabulator\modules\persistence.min.js" />
+    <Content Include="Scripts\tabulator\modules\resize_columns.js" />
+    <Content Include="Scripts\tabulator\modules\resize_columns.min.js" />
+    <Content Include="Scripts\tabulator\modules\resize_rows.js" />
+    <Content Include="Scripts\tabulator\modules\resize_rows.min.js" />
+    <Content Include="Scripts\tabulator\modules\resize_table.js" />
+    <Content Include="Scripts\tabulator\modules\resize_table.min.js" />
+    <Content Include="Scripts\tabulator\modules\responsive_layout.js" />
+    <Content Include="Scripts\tabulator\modules\responsive_layout.min.js" />
+    <Content Include="Scripts\tabulator\modules\select_row.js" />
+    <Content Include="Scripts\tabulator\modules\select_row.min.js" />
+    <Content Include="Scripts\tabulator\modules\sort.js" />
+    <Content Include="Scripts\tabulator\modules\sort.min.js" />
+    <Content Include="Scripts\tabulator\modules\validate.js" />
+    <Content Include="Scripts\tabulator\modules\validate.min.js" />
+    <Content Include="Scripts\tabulator\tabulator.js" />
+    <Content Include="Scripts\tabulator\tabulator.min.js" />
+    <Content Include="Scripts\tabulator\tabulator_core.js" />
+    <Content Include="Scripts\tabulator\tabulator_core.min.js" />
     <Content Include="Styles\font-awesome\css\font-awesome.css" />
     <Content Include="Styles\font-awesome\css\font-awesome.min.css" />
     <Content Include="Styles\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="Styles\spectrum.css" />
     <Content Include="Styles\tabulator.min.css" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap.css" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap.min.css" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap4.css" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap4.min.css" />
+    <Content Include="Styles\tabulator\semantic-ui\tabulator_semantic-ui.css" />
+    <Content Include="Styles\tabulator\semantic-ui\tabulator_semantic-ui.min.css" />
+    <Content Include="Styles\tabulator\tabulator.css" />
+    <Content Include="Styles\tabulator\tabulator.min.css" />
+    <Content Include="Styles\tabulator\tabulator_midnight.css" />
+    <Content Include="Styles\tabulator\tabulator_midnight.min.css" />
+    <Content Include="Styles\tabulator\tabulator_modern.css" />
+    <Content Include="Styles\tabulator\tabulator_modern.min.css" />
+    <Content Include="Styles\tabulator\tabulator_simple.css" />
+    <Content Include="Styles\tabulator\tabulator_simple.min.css" />
+    <Content Include="Styles\tabulator\tabulator_site.css" />
+    <Content Include="Styles\tabulator\tabulator_site.min.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
@@ -491,6 +566,14 @@
     <Content Include="Views\EditorTemplates\Parts\JsonDataTable.cshtml" />
     <Content Include="Views\DefinitionTemplates\JsonDataTablePartSettings.cshtml" />
     <Content Include="Views\Parts\JsonDataTable.cshtml" />
+    <Content Include="Styles\tabulator\tabulator.min.css.map" />
+    <Content Include="Styles\tabulator\tabulator_midnight.min.css.map" />
+    <Content Include="Styles\tabulator\tabulator_modern.min.css.map" />
+    <Content Include="Styles\tabulator\tabulator_simple.min.css.map" />
+    <Content Include="Styles\tabulator\tabulator_site.min.css.map" />
+    <Content Include="Styles\tabulator\semantic-ui\tabulator_semantic-ui.min.css.map" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap.min.css.map" />
+    <Content Include="Styles\tabulator\bootstrap\tabulator_bootstrap4.min.css.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
