--- a/src/Modules/Laser.Orchard.GoogleAnalytics/Laser.Orchard.GoogleAnalytics.csproj
+++ b/src/Modules/Laser.Orchard.GoogleAnalytics/Laser.Orchard.GoogleAnalytics.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\GoogleAnalyticsSettingsPartRecord.cs" />
     <Compile Include="Permissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CookieGDPR.cs" />
     <Compile Include="Services\MissingSettingsBanner.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +134,10 @@
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
       <Name>Orchard.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Laser.Orchard.Cookies\Laser.Orchard.Cookies.csproj">
+      <Project>{BDB0CD8D-7C6C-46F0-A041-6B2E1E0F9C9E}</Project>
+      <Name>Laser.Orchard.Cookies</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
