--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -256,6 +256,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activities\FieldSetValueActivity.cs" />
+    <Compile Include="Activities\FieldSetValueForm.cs" />
     <Compile Include="Activities\WebApiResponseActivity.cs" />
     <Compile Include="Activities\WebApiResponseEditForm.cs" />
     <Compile Include="Activities\RequestInspectorActivity.cs" />
