--- a/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
+++ b/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -95,6 +96,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Contents\cookie.png" />
     <Content Include="Scripts\CloudScripts\cookie_management_js.js" />
     <Content Include="Scripts\CloudScripts\informativebanner_cm_js.js" />
     <Content Include="Scripts\CloudScripts\jquery.min.js" />
@@ -148,6 +150,7 @@
   <ItemGroup>
     <None Include="bundleconfig.json" />
     <Content Include="packages.config" />
+    <Content Include="Contents\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Core\Orchard.Core.csproj">
@@ -163,6 +166,7 @@
       <Name>Orchard.Framework</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
