--- a/src/Modules/Laser.Orchard.Queries/Laser.Orchard.Queries.csproj
+++ b/src/Modules/Laser.Orchard.Queries/Laser.Orchard.Queries.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Controllers\UserQueryAdminController.cs" />
     <Compile Include="Drivers\QueryPickerPartDriver.cs" />
     <Compile Include="Forms\ParametrizedHQLForm.cs" />
+    <Compile Include="Forms\SelectCultureForm.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\QueryPickerPart.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="Navigation\AdminMenu.cs" />
     <Compile Include="Permissions.cs" />
     <Compile Include="Providers\HQLQueryFilterProvider.cs" />
+    <Compile Include="Providers\OptionalCultureFilterProvider.cs" />
     <Compile Include="Services\ICustomQuery.cs" />
     <Compile Include="Services\IQueryPickerService.cs" />
     <Compile Include="Settings\QueryUserFilterExtensionPartEditEvents.cs" />
