--- a/src/Modules/Laser.Orchard.CulturePicker/Laser.Orchard.CulturePicker.csproj
+++ b/src/Modules/Laser.Orchard.CulturePicker/Laser.Orchard.CulturePicker.csproj
@@ -166,6 +166,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Migrations.cs" />
+    <Compile Include="Projections\OptionalCultureFilterProvider.cs" />
+    <Compile Include="Projections\SelectCultureForm.cs" />
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\ContentLocalizableRouteService.cs" />
     <Compile Include="Services\ILocalizableRouteService.cs" />
@@ -208,9 +210,17 @@
       <Project>{66fccd76-2761-47e3-8d11-b45d0001ddaa}</Project>
       <Name>Orchard.Autoroute</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Forms\Orchard.Forms.csproj">
+      <Project>{642a49d7-8752-4177-80d6-bfbbcfad3de0}</Project>
+      <Name>Orchard.Forms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Localization\Orchard.Localization.csproj">
       <Project>{fbc8b571-ed50-49d8-8d9d-64ab7454a0d6}</Project>
       <Name>Orchard.Localization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Projections\Orchard.Projections.csproj">
+      <Project>{5531e894-d259-45a3-aa61-26dbe720c1ce}</Project>
+      <Name>Orchard.Projections</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Taxonomies\Orchard.Taxonomies.csproj">
       <Project>{e649ea64-d213-461b-87f7-d67035801443}</Project>
