--- a/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
+++ b/src/Modules/Contrib.Widgets/Contrib.Widgets.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -141,7 +142,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Drivers\LocalizationPartDriver.cs" />
     <Compile Include="Drivers\WidgetExPartDriver.cs" />
+    <Compile Include="Handlers\LocalizationPartHandler.cs" />
     <Compile Include="Handlers\WidgetExPartHandler.cs" />
     <Compile Include="Handlers\WidgetsContainerPartHandler.cs" />
     <Compile Include="Handlers\WidgetsContainerPartLocalizationHandler.cs" />
@@ -218,6 +221,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\ContribWidget.Localization.Edit.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
