- Adds the widget definition for Header and Footer within the project

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -593,6 +593,7 @@
     <Content Include="Views\EditorTemplates\Fields\JsonDataTable.cshtml" />
     <Content Include="Views\DefinitionTemplates\JsonDataTableFieldSettings.cshtml" />
     <Content Include="Views\Fields\JsonDataTable.cshtml" />
+    <Content Include="Views\Widget-HeaderFooterWidget.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
