--- a/src/Modules/Laser.Orchard.Translator/packages.config
+++ b/src/Modules/Laser.Orchard.Translator/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.9.1.8" targetFramework="net452" />
+  <package id="DotNetZip" version="1.12.0" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
