--- a/src/Modules/Laser.Orchard.UserReactions/Laser.Orchard.UserReactions.csproj
+++ b/src/Modules/Laser.Orchard.UserReactions/Laser.Orchard.UserReactions.csproj
@@ -79,6 +79,7 @@
       <HintPath>..\..\..\..\Orchard\src\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web" />
