Added library for geocoding for openlayers

--- a/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
+++ b/src/Modules/Laser.Orchard.Maps/Laser.Orchard.Maps.csproj
@@ -105,9 +105,11 @@
     <Content Include="Contents\default-pin.png" />
     <Content Include="Scripts\maps.js" />
     <Content Include="Scripts\markerclusterer.js" />
+    <Content Include="Scripts\ol-geocoder.js" />
     <Content Include="Scripts\ol.js" />
     <Content Include="Styles\GoogleMaps.css" />
     <Content Include="Styles\images\map-pin.png" />
+    <Content Include="Styles\ol-geocoder.css" />
     <Content Include="Styles\ol.css" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
