CRUD for addresses in personal information page

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -181,6 +181,9 @@
   <ItemGroup>
     <Content Include="Views\Addresses\AddressEditor.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Addresses\Edit.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
