Allow translations of taxonomies and terms even if the role has not the generic Edit Permission

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -446,6 +446,7 @@
     <Compile Include="Services\MaintenanceService.cs" />
     <Compile Include="TaxonomiesExtensions\Projections\OptionalTermsFilterProvider.cs" />
     <Compile Include="TaxonomiesExtensions\Projections\SelectTermsForm.cs" />
+    <Compile Include="TaxonomiesExtensions\Security\AuthorizationEventHandler.cs" />
     <Compile Include="TaxonomiesExtensions\Services\TaxonomyServiceExtension.cs" />
     <Compile Include="Tokens\AdditionalDateTokens.cs" />
     <Compile Include="Tokens\ContentDateModified.cs" />
